[package]
name = "my-wx78"
version = "0.1.0"
edition = "2024"

[dependencies]
qq-bot = { git = "https://github.com/NullOnSpace/silly-wx78.git", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
redis = { version = "1.2", features = ["tokio-comp"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures-util = "0.3"
