[package]
name = "my-wx78"
version = "0.2.0"
edition = "2024"

[dependencies]
qq-bot = { git = "https://github.com/NullOnSpace/silly-wx78.git", version = "0.2.0" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
redis = { version = "1.2", features = ["tokio-comp"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
